Version 2.02.46 - 
================================
  Fix metadata export for VG with missing PVs.
  Add vgimportclone and install it and the man page by default.
  Force max_lv restriction only for newly created LV.
  Remove unneeded import parameter from lv_create_empty.
  Merge lv_is_displayable and lv_is_visible functions.
  Introduce lv_set_visible & lv_set_invisible functions.
  Fix lv_is_visible to handle virtual origin.
  Introduce link_lv_to_vg and unlink_lv_from_vg functions.
  Remove lv_count from VG and use counter function instead.
  Fix snapshot segment import to not use duplicate segments & replace.
  Do not query nonexistent devices for readahead.
  Remove NON_BLOCKING lock flag from tools and set a policy to auto-set.
  Remove snapshot_count from VG and use function instead.
  Fix first_seg() call for empty segment list.
  Add make install_lvm2 as complement to device-mapper install.
  Reject missing PVs from allocation in toollib.
  Fix PV datalignment for values starting prior to MDA area. (2.02.45)
  Add sparse devices: lvcreate -s --virtualoriginsize (hidden zero origin).
  Add lvs origin_size field.
  Fix linux configure --enable-debug to exclude -O2.
  Implement lvconvert --repair, for repairing partially failed mirrors.
  Fix vgreduce --removemissing failure exit code.
  Fix remote metadata backup for clvmd.
  Alloc PV internal structure from VG mempool if possible.
  Fix metadata backup to run after vg_commit always.
  Tidy clvmd volume lock cache functions.
  Fix pvs report for orphan PVs when segment attributes are requested.
  Fix pvs -a output to not read volume groups from non-PV devices.
  Add MMC (mmcblk) device type to filters.
  Introduce memory pools per volume group (to reduce memory for large VGs).
  Add memory pool leaks detection.
  Use copy of PV structure when manipulating with global PV lists.
  Always return exit error status when locking of volume group fails.
  Fix mirror log convert validation question.